tests/snapshots/mcp_transcripts__snapshots_interrupt_handler_output.snap
---
source: tests/mcp_transcripts.rs
expression: rendered
---
== session: interrupt_handler ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "tryCatch({ Sys.sleep(10000000) }, interrupt = function(e) cat(\"interrupt received\\n\"))\n",
    "timeout_ms": 200
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "<<repl status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0003",
    "timeout_ms": 5000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "interrupt received"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
