tests/snapshots/mcp_transcripts__snapshots_interrupt_handler_output@transcript.snap
---
source: tests/mcp_transcripts.rs
expression: transcript
---
== session: interrupt_handler ==
1) r_repl timeout_ms=3000
>>> cat("INTERRUPT_READY\n")
>>> flush.console()
>>> tryCatch(
>>>   {
>>>     repeat Sys.sleep(0.5)
>>>   },
>>>   interrupt = function(e) cat("interrupt received\n")
>>> )
<<< INTERRUPT_READY
<<< <<repl status: busy, write_stdin timeout reached; elapsed_ms=N>>

2) r_repl timeout_ms=5000
>>> 
<<< interrupt received

3) r_repl timeout_ms=10000
>>> 1+1
<<< [1] 2
