tests/snapshots/mcp_transcripts__snapshots_support_multiple_calls_and_sessions.snap
---
source: tests/mcp_transcripts.rs
expression: rendered
---
== session: session_1 ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "x <- 40 + 2\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "x\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 42\n> "
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0004"
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[repl] new session started"
    }
  ]
}

== session: session_2 ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "x\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "stderr: Error: object 'x' not found\n"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
