tests/snapshots/mcp_transcripts__snapshots_support_multiple_calls_and_sessions@transcript.snap
---
source: tests/mcp_transcripts.rs
expression: transcript
---
== session: session_1 ==
1) r_repl timeout_ms=10000
>>> x <- 40 + 2
<<< > 

2) r_repl timeout_ms=10000
>>> x
<<< [1] 42
<<< > 

3) r_repl timeout_ms=5000
>>> 
<<< [repl] new session started

== session: session_2 ==
1) r_repl timeout_ms=10000
>>> x
<<< stderr: Error: object 'x' not found
<<< 
<<< >
