tests/snapshots/mcp_transcripts__snapshots_tempdir_session_restart.snap
---
source: tests/mcp_transcripts.rs
expression: rendered
---
== session: tempdir_session ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\ncat(\"TMPDIR_SET=\", nzchar(Sys.getenv(\"TMPDIR\")), \"\\n\", sep = \"\")\ncat(\"TMPDIR_MATCH=\", Sys.getenv(\"TMPDIR\") == Sys.getenv(\"MCP_REPL_R_SESSION_TMPDIR\"), \"\\n\", sep = \"\")\ncat(\"TEMPDIR_UNDER_TMPDIR=\", startsWith(tempdir(), Sys.getenv(\"TMPDIR\")), \"\\n\", sep = \"\")\nmarker <- file.path(tempdir(), \"mcp-repl-snapshot.txt\")\ntryCatch({\n  writeLines(\"foo\", marker)\n  cat(\"TEMPDIR_MARKER_OK\\n\")\n}, error = function(e) {\n  message(\"TEMPDIR_MARKER_ERROR:\", conditionMessage(e))\n})\ntf <- tempfile()\ntryCatch({\n  writeLines(\"bar\", tf)\n  cat(\"TEMPFILE_OK\\n\")\n}, error = function(e) {\n  message(\"TEMPFILE_ERROR:\", conditionMessage(e))\n})\nunlink(tf)\ncat(\"TEMPDIR_LIST=\", paste(list.files(tempdir()), collapse = \",\"), \"\\n\", sep = \"\")\nroot_marker <- file.path(Sys.getenv(\"TMPDIR\"), \"mcp-repl-snapshot-root.txt\")\ntryCatch({\n  writeLines(\"root\", root_marker)\n  cat(\"ROOT_MARKER_OK\\n\")\n}, error = function(e) {\n  message(\"ROOT_MARKER_ERROR:\", conditionMessage(e))\n})\ncat(\"ROOT_MARKER_EXISTS=\", file.exists(root_marker), \"\\n\", sep = \"\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "TMPDIR_SET=TRUE\nTMPDIR_MATCH=TRUE\nTEMPDIR_UNDER_TMPDIR=TRUE\nTEMPDIR_MARKER_OK\nTEMPFILE_OK\nTEMPDIR_LIST=mcp-repl-snapshot.txt\nROOT_MARKER_OK\nROOT_MARKER_EXISTS=TRUE"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0004"
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[repl] new session started"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nroot_marker <- file.path(Sys.getenv(\"TMPDIR\"), \"mcp-repl-snapshot-root.txt\")\ncat(\"ROOT_MARKER_EXISTS=\", file.exists(root_marker), \"\\n\", sep = \"\")\ncat(\"TEMPDIR_LIST=\", paste(list.files(tempdir()), collapse = \",\"), \"\\n\", sep = \"\")\ncat(\"TEMPDIR_UNDER_TMPDIR=\", startsWith(tempdir(), Sys.getenv(\"TMPDIR\")), \"\\n\", sep = \"\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "ROOT_MARKER_EXISTS=FALSE\nTEMPDIR_LIST=\nTEMPDIR_UNDER_TMPDIR=TRUE"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\u0004"
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[repl] new session started"
    }
  ]
}
-- step 5 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nroot_marker <- file.path(Sys.getenv(\"TMPDIR\"), \"mcp-repl-snapshot-root.txt\")\ncat(\"ROOT_MARKER_EXISTS=\", file.exists(root_marker), \"\\n\", sep = \"\")\ncat(\"TEMPDIR_LIST=\", paste(list.files(tempdir()), collapse = \",\"), \"\\n\", sep = \"\")\ncat(\"TEMPDIR_UNDER_TMPDIR=\", startsWith(tempdir(), Sys.getenv(\"TMPDIR\")), \"\\n\", sep = \"\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "ROOT_MARKER_EXISTS=FALSE\nTEMPDIR_LIST=\nTEMPDIR_UNDER_TMPDIR=TRUE"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
